// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles projects outside root folder 1`] = `
opensearch-dashboards
├── packages
│   ├── foo
│   └── bar
└── ../plugins
    ├── zorge
    ├── quux
    └── baz
`;

exports[`handles projects with root folder 1`] = `
opensearch-dashboards
└── packages
    ├── foo
    └── bar
`;

exports[`handles projects within projects outside root folder 1`] = `
opensearch-dashboards
├── packages
│   ├── foo
│   └── bar
└── ../opensearch-dashboards-extra/additional_projects (with-additional-projects)
    ├── packages/baz
    └── plugins/quux
`;
